<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEEE0"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layout_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:contentDescription="@string/app_name_desc"
            android:textSize="32sp"
            android:textColor="#5D3316"
            android:fontFamily="@font/paperlogy_7"
            />
        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="52sp"
            android:layout_height="52sp"
            android:src="@drawable/photolog_logo"
            android:contentDescription="@string/app_logo_desc"
            android:layout_margin="2dp"
            />

        <ImageView
            android:id="@+id/my_page"
            android:layout_width="75dp"
            android:layout_height="70dp"
            android:layout_marginLeft="150dp"
            android:contentDescription="@string/app_logo_desc"
            android:src="@drawable/my_page" />
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_random_diary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:strokeWidth="1dp"
        app:strokeColor="#452813"
        app:cardBackgroundColor="#FFEBD8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_logo">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/my_diary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            >
            <ImageView
                android:id="@+id/img_diary"
                android:layout_width="170dp"
                android:layout_height="140dp"
                android:scaleType="centerCrop"
                android:src="@drawable/sample"
                android:background="@drawable/rounded_image_mask"
                android:clipToOutline="true"
                android:contentDescription="@string/sample_img_desc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/tv_diary_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/paperlogy_6"
                android:text="@string/diary_date_placeholder"
                android:textColor="#5D3316"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/img_diary"
                app:layout_constraintTop_toBottomOf="@id/img_diary" />
            <TextView
                android:id="@+id/tv_diary_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/paperlogy_6"
                android:text="@string/diary_title_placeholder"
                android:textColor="#5D3316"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/img_diary"
                app:layout_constraintTop_toTopOf="@id/img_diary" />
            <TextView
                android:id="@+id/tv_diary_content"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:justificationMode="inter_word"
                tools:ignore="UnusedAttribute"
                android:layout_marginStart="8dp"
                android:layout_marginTop="6dp"
                android:ellipsize="end"
                android:fontFamily="@font/paperlogy_5"
                android:maxLines="7"
                android:scrollHorizontally="false"
                android:text="@string/diary_content_placeholder"
                android:textColor="#5D3316"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_diary_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/img_diary"
                app:layout_constraintTop_toBottomOf="@id/tv_diary_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


    <LinearLayout
        android:id="@+id/layout_family_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:minHeight="10dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_random_diary">

        <TextView
            android:id="@+id/tv_family_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/paperlogy_7"
            android:text="@string/family_diary"
            android:textColor="#5D3316"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/img_plus_icon"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:src="@drawable/icon_plus_shape_2"
            android:contentDescription="@string/family_diary_plus_ic"
            />
    </LinearLayout>

    <View
        android:id="@+id/family_header_underline"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#5D3316"

        app:layout_constraintStart_toStartOf="@id/layout_family_header"
        app:layout_constraintEnd_toEndOf="@id/layout_family_header"
        app:layout_constraintTop_toBottomOf="@id/layout_family_header"
        />

    <FrameLayout
        android:id="@+id/family_Diary_Table_Frame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/family_table_border"
        android:clipChildren="true"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/family_header_underline">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/family_Diary_Layout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="#FFEAD5">

            <TextView
                android:id="@+id/tv_family_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="작성된 일기가 없습니다.\n첫 일기를 작성해보세요!"
                android:textSize="18sp"
                android:textColor="#5D3316"
                android:fontFamily="@font/paperlogy_6"
                android:gravity="center"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.25" />

            <TextView
                android:id="@+id/header_author"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/paperlogy_6"
                android:gravity="center"
                android:paddingVertical="8dp"
                android:text="@string/family_diary_author"
                android:textColor="#665F5A"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@id/guideline_vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/header_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/paperlogy_6"
                android:gravity="center"
                android:paddingVertical="8dp"
                android:text="@string/family_diary_title"
                android:textColor="#665F5A"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline_vertical"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/line_horizontal"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="#A89E96"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/header_author" />

            <View
                android:id="@+id/line_vertical"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:background="#A89E96"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline_vertical"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/row_anchor_1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/line_horizontal"
                app:layout_constraintBottom_toTopOf="@id/row_anchor_2"
                app:layout_constraintStart_toStartOf="parent"/>
            <View
                android:id="@+id/row_anchor_2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/row_anchor_1"
                app:layout_constraintBottom_toTopOf="@id/row_anchor_3"
                app:layout_constraintStart_toStartOf="parent"/>
            <View
                android:id="@+id/row_anchor_3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/row_anchor_2"
                app:layout_constraintBottom_toTopOf="@id/row_anchor_4"
                app:layout_constraintStart_toStartOf="parent"/>
            <View
                android:id="@+id/row_anchor_4"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/row_anchor_3"
                app:layout_constraintBottom_toTopOf="@id/row_anchor_5"
                app:layout_constraintStart_toStartOf="parent"/>
            <View
                android:id="@+id/row_anchor_5"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/row_anchor_4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.constraintlayout.widget.Group
                android:id="@+id/group_rows"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="row_anchor_1,row_anchor_2,row_anchor_3,row_anchor_4,row_anchor_5"
                app:layout_constraintVertical_chainStyle="spread" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/layout_calendar_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/family_Diary_Table_Frame">

        <com.example.photolog_front.MyCalendar
            android:id="@+id/my_calendar"
            android:layout_width="0dp"
            android:layout_height="290dp"
            android:layout_weight="1.5"
            android:layout_marginEnd="16dp"
            android:background="@drawable/family_table_border"
            android:padding="4dp"
            />

        <FrameLayout
            android:id="@+id/layout_add_diary"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/family_table_border"
            android:padding="4dp"
            android:clickable="true"
            android:focusable="true"
            >
            
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFEBD8"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/icon_plus_shape"
                android:contentDescription="@string/add_diary_ic"
                />

        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>