<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEEE0"
    tools:context=".FamilyDiaryActivity">

    <LinearLayout
        android:id="@+id/layout_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:contentDescription="@string/app_name_desc"
            android:textSize="32sp"
            android:textColor="#5D3316"
            android:fontFamily="@font/paperlogy_7"
            />
        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="52sp"
            android:layout_height="52sp"
            android:src="@drawable/photolog_logo"
            android:contentDescription="@string/app_logo_desc"
            android:layout_margin="2dp"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_my_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="나의 일기"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#5D3316"
        android:fontFamily="@font/paperlogy_6"
        app:layout_constraintTop_toBottomOf="@id/layout_logo"
        app:layout_constraintStart_toStartOf="@id/layout_logo" />

    <TextView
        android:id="@+id/tv_my_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="아직 작성된 일기가 없어요. \n 제일 먼저 일기를 작성해보세요!"
        android:textColor="#5D3316"
        android:textSize="25dp"
        android:gravity="center"
        android:fontFamily="@font/paperlogy_7"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        />

    <TableLayout
        android:id="@+id/recycler_my_diary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:stretchColumns="1"
        android:background="@drawable/family_table_border"
        android:clipToOutline="true"
        app:layout_constraintTop_toBottomOf="@id/tv_my_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layout_my_pagination"
        app:layout_constraintVertical_bias="0.0">

        <TableRow
            android:background="@drawable/header_row_background">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="일기"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:fontFamily="@font/paperlogy_7"
                android:gravity="center"
                android:padding="8dp" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/layout_my_pagination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/btn_my_prev"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/icon_left_arrow"
            android:contentDescription="이전 페이지" />

        <TextView
            android:id="@+id/tv_my_page_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="-1-"
            android:textSize="18sp"
            android:textColor="#5D3316"
            android:fontFamily="@font/paperlogy_6" />

        <ImageView
            android:id="@+id/btn_my_next"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/icon_right_arrow"
            android:contentDescription="다음 페이지" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>