<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_terms_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEEE0"
    tools:context=".TermsDetailActivity">

    <LinearLayout
        android:id="@+id/layout_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:contentDescription="@string/app_name_desc"
            android:textSize="32sp"
            android:textColor="#5D3316"
            android:fontFamily="@font/paperlogy_7"
            />
        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="52sp"
            android:layout_height="52sp"
            android:src="@drawable/photolog_logo"
            android:contentDescription="@string/app_logo_desc"
            android:layout_margin="2dp"
            />

        <ImageView
            android:id="@+id/my_page"
            android:layout_width="75dp"
            android:layout_height="70dp"
            android:layout_marginLeft="150dp"
            android:contentDescription="@string/app_logo_desc"
            android:src="@drawable/my_page" />
    </LinearLayout>

    <!-- 뒤로가기 버튼 -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/paperlogy_7"
        android:paddingHorizontal="14dp"
        android:text="뒤로가기"
        android:textColor="#5D3316"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- 약관 제목 -->
    <TextView
        android:id="@+id/tvTermsTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/paperlogy_7"
        android:gravity="center"
        android:text="이용 약관"
        android:textColor="#5D3316"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/layout_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- 윗선 -->
    <View
        android:id="@+id/topDivider"
        android:layout_width="0dp"
        android:layout_height="1.5dp"
        android:layout_marginTop="10dp"
        android:background="#8B5A2B"
        app:layout_constraintTop_toBottomOf="@id/tvTermsTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- 동의 버튼 -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAgree"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/login_button_bg"
        android:fontFamily="@font/paperlogy_7"
        android:text="동의합니다"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- 아랫선 -->
    <View
        android:id="@+id/bottomDivider"
        android:layout_width="0dp"
        android:layout_height="1.5dp"
        android:layout_marginBottom="20dp"
        android:background="#8B5A2B"
        app:layout_constraintBottom_toTopOf="@id/btnAgree"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- 본문 영역 -->
    <ScrollView
        android:id="@+id/scrollTerms"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/topDivider"
        app:layout_constraintBottom_toTopOf="@id/bottomDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tvTermsContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/paperlogy_6"
            android:lineSpacingExtra="6dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="16dp"
            android:text="약관 본문"
            android:textColor="#5D3316"
            android:textSize="20sp" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>